--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <style>
+    body {
+        background-color: lightsteelblue;
+        font-family: Arial, sans-serif;
+        text-align: center;
+      }  
+
+    h1{
+      text-align: center;
+      color: whitesmoke;
+      font-size: 80px;
+    }  
+
+    .link-container {
+      text-align: center;
+      margin-top: 30px;
+    }
+
+    a{
+      display: inline-block;
+      padding: 12px 25px;
+      margin: 10px;
+      background-color: rgba(0, 0, 0, 0.3); 
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 18px;
+    }        
+            
+  </style>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OSPREY BAR</title>
